--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ pyppeteer==0.0.25
 pyquery==1.4.1
 requests==2.22.0
 requests-html==0.10.0
+selenium==3.141.0
 six==1.13.0
 soupsieve==1.9.5
 tqdm==4.41.0
