--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dominate==2.4.0
 fake-useragent==0.1.11
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
+Flask-SocketIO==4.2.1
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.3
@@ -20,6 +21,8 @@ pyee==6.0.0
 pymongo==3.10.0
 pyppeteer==0.0.25
 pyquery==1.4.1
+python-engineio==3.11.2
+python-socketio==4.4.0
 requests==2.22.0
 requests-html==0.10.0
 selenium==3.141.0
