--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,18 @@ Click==7.0
 cssselect==1.1.0
 dnspython==1.16.0
 dominate==2.4.0
+eventlet==0.25.1
 fake-useragent==0.1.11
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
 Flask-SocketIO==4.2.1
+greenlet==0.4.15
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.3
 lxml==4.4.2
 MarkupSafe==1.1.1
+monotonic==1.5
 parse==1.14.0
 pyee==6.0.0
 pymongo==3.10.0
